# sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
benchmark/: .clang-tidy  accumulator.cpp  dummy.cpp
benchmarks/: .clang-tidy
cmake/: Benchmark.cmake  Coverage.cmake  Linker.cmake  Linter.cmake  Utils.cmake  Warnings.cmake
cmake/toolchains/: vcpkg.cmake  x64-vcpkg.cmake  x86-vcpkg.cmake
include/: widget.hpp
projects/: sandbox.cmake
scripts/: setup-devtools.sh
src/: main.cpp
tests/: .clang-tidy  dummy.cpp  widget.cpp
tools/: cli.py  main.py
